@@ -2,7 +2,7 @@ describe("map_ports.js file", function () {
   describe("port_loaded", function () {
     beforeEach(function () {
       m_ports = get_mock_m_ports()
-    })
+    });
     it("exists", function () {
       expect(port_loaded(443)).toEqual(true)
     });
@@ -18,7 +18,7 @@ describe("map_ports.js file", function () {
   describe("get_port_name", function () {
     beforeEach(function () {
       m_ports = get_mock_m_ports()
-    })
+    });
     it("doesn't exist", function () {
       expect(get_port_name(444)).toEqual("444");
     });
@@ -37,7 +37,7 @@ describe("map_ports.js file", function () {
   describe("get_port_alias", function () {
     beforeEach(function () {
       m_ports = get_mock_m_ports()
-    })
+    });
     it("doesn't exist", function () {
       expect(get_port_alias(444)).toEqual("444");
     });
@@ -56,7 +56,7 @@ describe("map_ports.js file", function () {
   describe("get_port_description", function () {
     beforeEach(function () {
       m_ports = get_mock_m_ports()
-    })
+    });
     it("doesn't exist", function () {
       expect(get_port_description(444)).toEqual("");
     });
@@ -75,7 +75,7 @@ describe("map_ports.js file", function () {
   describe("update_port", function () {
     beforeEach(function () {
       m_ports = get_mock_m_ports()
-    })
+    });
     it("creates new port", function () {
       expect(get_port_alias(4)).toEqual("4");
       expect(get_port_description(4)).toEqual("");
@@ -101,7 +101,7 @@ describe("map_ports.js file", function () {
         description: "desc1",
         alias_name: "name2",
         alias_description: "desc2",
-      }
+      };
       update_port(443, new_port);
 
       expect(get_port_alias(443)).toEqual("name2");
@@ -215,8 +215,66 @@ describe("map_ports.js file", function () {
 
 
   describe("port_save", function () {
-    it(" ", function () {
-      expect(1).toEqual(1);
+    beforeEach(function () {
+      m_ports = get_mock_m_ports();
+      m_portinfo = {};
+      pa_id = document.createElement("input");
+      pa_id.type = "checkbox";
+      pnum_id = document.createElement("span");
+      pn_id = document.createElement("td");
+      pd_id = document.createElement("td");
+      pan_id = document.createElement("input");
+      pan_id.type = "text";
+      pad_id = document.createElement("input");
+      pad_id.type = "text";
+      document.getElementById = function(query) {
+        if (query === "port_active") { return pa_id; }
+        if (query === "port_number") { return pnum_id; }
+        if (query === "port_name") { return pn_id; }
+        if (query === "port_description") { return pd_id; }
+        if (query === "port_alias_name") { return pan_id; }
+        if (query === "port_alias_description") { return pad_id; }
+      };
+      set_to = function(test_port) {
+        "use strict";
+        pnum_id.innerHTML = test_port;
+        port_display(m_ports[test_port]);
+      };
+      spyOn(window, "POST_portinfo");
+    });
+
+    it("doesn't get called with no changes.", function () {
+      set_to(3268);
+      port_save();
+      expect(window.POST_portinfo).not.toHaveBeenCalled();
+    });
+    it("gets called when 'active' changes.", function () {
+      set_to(3268);
+      pa_id.checked = false;
+      port_save();
+      expect(window.POST_portinfo).toHaveBeenCalled();
+      var changes = {port: 3268, active: 0};
+      expect(m_ports[3268].active).toEqual(0);
+      expect(window.POST_portinfo).toHaveBeenCalledWith(changes);
+    });
+    it("gets called when 'alias_name' changes.", function () {
+      set_to(3268);
+      pan_id.value = "new_alias";
+      port_save();
+      expect(window.POST_portinfo).toHaveBeenCalled();
+      var changes = {port: 3268, alias_name: "new_alias"};
+      expect(m_ports[3268].alias_name).toEqual("new_alias");
+      expect(window.POST_portinfo).toHaveBeenCalledWith(changes);
+
+    });
+    it("gets called when 'alias_description' changes.", function () {
+      set_to(3268);
+      pad_id.value = "new_desc";
+      port_save();
+      expect(window.POST_portinfo).toHaveBeenCalled();
+      var changes = {port: 3268, alias_description: "new_desc"};
+      expect(m_ports[3268].alias_description).toEqual("new_desc");
+      expect(window.POST_portinfo).toHaveBeenCalledWith(changes);
     });
   });
 
@@ -229,8 +287,73 @@ describe("map_ports.js file", function () {
 
 
   describe("port_display", function () {
-    it(" ", function () {
-      expect(1).toEqual(1);
+    beforeEach(function () {
+      m_ports = get_mock_m_ports();
+      m_portinfo = {};
+      pa_id = document.createElement("input");
+      pa_id.type = "checkbox";
+      pnum_id = document.createElement("span");
+      pn_id = document.createElement("td");
+      pd_id = document.createElement("td");
+      pan_id = document.createElement("input");
+      pan_id.type = "text";
+      pad_id = document.createElement("input");
+      pad_id.type = "text";
+      document.getElementById = function(query) {
+        if (query === "port_active") { return pa_id; }
+        if (query === "port_number") { return pnum_id; }
+        if (query === "port_name") { return pn_id; }
+        if (query === "port_description") { return pd_id; }
+        if (query === "port_alias_name") { return pan_id; }
+        if (query === "port_alias_description") { return pad_id; }
+      };
+      set_to = function(test_port) {
+        "use strict";
+        pnum_id.innerHTML = test_port;
+        port_display(m_ports[test_port]);
+      };
+    });
+
+    it("populates m_portinfo (exists)", function () {
+      "use strict";
+      port_display(m_ports[3268]);
+      expect(m_portinfo.active).toEqual(1);
+      expect(m_portinfo.alias_name).toEqual('other name');
+      expect(m_portinfo.alias_description).toEqual('other description');
+    });
+    it("populates m_portinfo (not exists)", function () {
+      "use strict";
+      port_display(m_ports[3269]);
+      expect(m_portinfo.active).toEqual(1);
+      expect(m_portinfo.alias_name).toEqual('');
+      expect(m_portinfo.alias_description).toEqual('');
+    });
+    it("sets div values (exists)", function () {
+      "use strict";
+      port_display(m_ports[3268]);
+      expect(pa_id.checked).toEqual(true);
+      expect(pn_id.innerHTML).toEqual("msft-gc");
+      expect(pd_id.innerHTML).toEqual("Microsoft Global Catalog");
+      expect(pan_id.value).toEqual("other name");
+      expect(pad_id.value).toEqual("other description");
+    });
+    it("sets div values (unaliased)", function () {
+      "use strict";
+      port_display(m_ports[8081]);
+      expect(pa_id.checked).toEqual(false);
+      expect(pn_id.innerHTML).toEqual("sunproxyad");
+      expect(pd_id.innerHTML).toEqual("Sun Proxy Admin Service");
+      expect(pan_id.value).toEqual("");
+      expect(pad_id.value).toEqual("");
+    });
+    it("sets div values (not exists)", function () {
+      "use strict";
+      port_display(m_ports[4]);
+      expect(pa_id.checked).toEqual(true);
+      expect(pn_id.innerHTML).toEqual("none");
+      expect(pd_id.innerHTML).toEqual("none");
+      expect(pan_id.value).toEqual("");
+      expect(pad_id.value).toEqual("");
     });
   });
 });
