@@ -116,25 +116,21 @@ function port_request_submit() {
 
 function port_save() {
     "use strict";
-    var differences = false;
+    var difference_set = {};
     if (document.getElementById("port_active").checked !== (m_portinfo.active === 1)) {
         //toggle active between 0 and 1
-        m_portinfo.active = 1 - m_portinfo.active;
-        differences = true;
+        difference_set.active = 1 - m_portinfo.active;
     }
     if (document.getElementById("port_alias_name").value !== m_portinfo.alias_name) {
-        m_portinfo.alias_name = document.getElementById("port_alias_name").value;
-        differences = true;
+        difference_set.alias_name = document.getElementById("port_alias_name").value;
     }
     if (document.getElementById("port_alias_description").value !== m_portinfo.alias_description) {
-        m_portinfo.alias_description = document.getElementById("port_alias_description").value;
-        differences = true;
+        difference_set.alias_description = document.getElementById("port_alias_description").value;
     }
-    update_port(m_portinfo);
-    if (differences) {
-        delete m_portinfo.name;
-        delete m_portinfo.description;
-        POST_portinfo(m_portinfo);
+    if (Object.keys(difference_set).length !== 0) {
+        difference_set.port = m_portinfo.port;
+        update_port(difference_set.port, difference_set);
+        POST_portinfo(difference_set);
     }
 }
 
